fix(examples): ts issues

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "composite": true
   },
   "include": [
     "src/**/*"
