--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -18,8 +18,7 @@
     "isolatedModules": true
   },
   "include": [
-    "src/**/*",
-    "vite.config.ts"
+    "src/**/*"
   ],
   "references": [
     {
