--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,8 +29,7 @@
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.1",
-    "zustand": "^5.0.3"
+    "vitest": "^3.1.1"
   },
   "sideEffects": false
 }
