--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@lattice/core",
   "version": "0.0.1",
+  "description": "Core framework-agnostic behavior composition layer for Lattice components",
   "author": "Lattice Team",
   "license": "MIT",
   "type": "module",
@@ -31,5 +32,8 @@
     "typescript": "^5.8.3",
     "vitest": "^3.1.1"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  }
 }
