--- a/packages/zustand/package.json
+++ b/packages/zustand/package.json
@@ -1,22 +1,24 @@
 {
   "name": "@lattice/zustand",
   "version": "0.0.1",
-  "description": "Zustand store adapter for Lattice",
+  "description": "Zustand store adapter for Lattice components",
+  "author": "Lattice Team",
+  "license": "MIT",
+  "type": "module",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "test": "vitest",
-    "test:ci": "vitest run",
+    "build": "tsc --emitDeclarationOnly && tsup",
+    "dev": "tsc --emitDeclarationOnly --watch & tsup --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
@@ -25,20 +27,21 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^22.13.4",
-    "tsup": "^8.3.0",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.4.0",
     "typescript": "^5.8.3",
     "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "zustand": "^5.0.0"
   },
-  "publishConfig": {
-    "access": "public"
-  },
   "files": [
     "dist",
-    "src"
+    "README.md",
+    "LICENSE"
   ],
-  "license": "MIT"
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  }
 }
