--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,6 +26,11 @@
     "@lattice/core": "workspace:*"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.1.0",
+    "@types/react": "^18.3.15",
+    "@types/react-dom": "^18.3.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
