--- a/packages/adapter-memory/tsconfig.json
+++ b/packages/adapter-memory/tsconfig.json
@@ -3,6 +3,16 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
+    "declaration": true,
+    "declarationMap": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitReturns": true,
+    "composite": true,
     "types": ["vitest/importMeta"]
   },
   "include": ["src/**/*"]
