--- a/packages/adapter-memory/package.json
+++ b/packages/adapter-memory/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^22.5.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^2.1.8"
   },
   "files": [
