--- a/packages/adapter-redux/package.json
+++ b/packages/adapter-redux/package.json
@@ -54,6 +54,7 @@
     "react-test-renderer": "^18.3.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^2.1.8"
   },
   "files": [
