--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,16 +20,17 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc --emitDeclarationOnly && tsup",
-    "dev": "tsc --emitDeclarationOnly --watch & tsup --watch",
+    "build": "vite build",
+    "dev": "vite build --watch",
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
     "test": "vitest run"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
-    "tsup": "^8.4.0",
     "typescript": "^5.8.3",
+    "vite": "^6.3.2",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.1.1"
   },
   "sideEffects": false,
