--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -10,10 +10,10 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@lattice/core": "workspace:*",
-    "@lattice/adapter-zustand": "workspace:*",
-    "@lattice/adapter-redux": "workspace:*",
     "@lattice/adapter-memory": "workspace:*",
+    "@lattice/adapter-redux": "workspace:*",
+    "@lattice/adapter-zustand": "workspace:*",
+    "@lattice/core": "workspace:*",
     "@lattice/test-utils": "workspace:*",
     "@reduxjs/toolkit": "^2.5.0",
     "@types/react": "^18.3.22",
@@ -30,6 +30,7 @@
     "jsdom": "^26.0.0",
     "typescript": "^5.8.0",
     "vite": "^6.0.7",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^2.1.8"
   }
 }
