--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@types/react": "^18.3.22",
     "@types/react-dom": "^18.3.5",
+    "next": "^15.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
