feat: simplify architecture and add Vue support
- Remove middleware/composition API in favor of direct adapter pattern
- Add Vue support with @lattice/store-vue and @lattice/adapter-pinia packages
- Consolidate React hooks into @lattice/runtime/react
- Add Vue composables in @lattice/runtime/vue
- Replace adapter-memory with store-react for consistency
- Simplify slice API by removing AdapterAPI parameter requirement
- Remove adapter-specific React exports (moved to runtime)
- Update all examples to use simplified API
- Clean up unused documentation and dependencies

BREAKING CHANGE: Middleware API removed, slice signatures simplified

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -8,10 +8,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@lattice/adapter-memory": "workspace:*",
     "@lattice/adapter-redux": "workspace:*",
     "@lattice/adapter-zustand": "workspace:*",
     "@lattice/core": "workspace:*",
+    "@lattice/runtime": "workspace:*",
     "@lattice/test-utils": "workspace:*",
     "@reduxjs/toolkit": "^2.5.0",
     "@types/react": "^18.3.22",
