--- a/packages/adapter-zustand/package.json
+++ b/packages/adapter-zustand/package.json
@@ -10,10 +10,6 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    },
-    "./react": {
-      "import": "./dist/react.js",
-      "types": "./dist/react.d.ts"
     }
   },
   "scripts": {
@@ -25,6 +21,7 @@
   },
   "dependencies": {
     "@lattice/core": "workspace:*",
+    "@lattice/runtime": "workspace:*",
     "zustand": "^5.0.3"
   },
   "peerDependencies": {
