--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -12,6 +12,14 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./react": {
+      "import": "./dist/react.js",
+      "types": "./dist/react.d.ts"
+    },
+    "./vue": {
+      "import": "./dist/vue.js",
+      "types": "./dist/vue.d.ts"
     }
   },
   "files": [
@@ -29,12 +37,31 @@
   "dependencies": {
     "@lattice/core": "workspace:*"
   },
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "vue": "^3.3.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "vue": {
+      "optional": true
+    }
+  },
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^18.0.0",
+    "@vue/test-utils": "^2.4.0",
+    "jsdom": "^26.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "vue": "^3.4.0"
   },
   "sideEffects": false,
   "publishConfig": {
