--- a/packages/store-react/package.json
+++ b/packages/store-react/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@lattice/adapter-memory",
+  "name": "@lattice/store-react",
   "version": "0.0.1",
+  "description": "Lightweight state store for React - create reactive stores using only React hooks",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -22,8 +23,19 @@
     "@lattice/core": "workspace:*",
     "@lattice/runtime": "workspace:*"
   },
+  "peerDependencies": {
+    "react": ">=16.8.0"
+  },
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^22.5.4",
+    "@types/react": "^18.3.17",
+    "happy-dom": "^17.5.6",
+    "jsdom": "^26.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-test-renderer": "^18.3.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vite-plugin-dts": "^4.5.4",
