--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "typecheck": "lerna run typecheck",
+    "check": "lerna run check",
     "test": "lerna run test"
   },
   "devDependencies": {
