--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
     "dev": "vite build --watch",
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
+    "check": "pnpm typecheck && pnpm test",
     "test": "vitest run"
   },
   "devDependencies": {
