--- a/packages/store-vue/package.json
+++ b/packages/store-vue/package.json
@@ -22,6 +22,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
+    "check": "pnpm typecheck && pnpm test",
     "clean": "rm -rf dist"
   },
   "dependencies": {
