--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -27,6 +27,8 @@
     "pinia": "^2.3.0",
     "vue": "^3.5.0",
     "react": "^18.3.1",
-    "@testing-library/react": "^14.0.0"
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.3.0",
+    "jsdom": "^25.0.0"
   }
 }
