add memoize with env for bench

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "bench": "vitest bench --run",
-    "bench:ci": "vitest bench --reporter=default --reporter=json --outputFile=bench-results.json",
+    "bench": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run",
+    "bench:ci": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --reporter=default --reporter=json --outputFile=bench-results.json",
     "bench:compare": "node scripts/compare-benchmarks.js",
     "typecheck": "tsc --noEmit",
     "check": "pnpm typecheck"
