--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -11,11 +11,17 @@
     "bench:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run",
     "bench:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run",
     "bench:ci": "pnpm bench:ci:raw && pnpm bench:ci:real",
-    "bench:ci:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --reporter=default --reporter=json --outputFile=bench-results-raw.json",
-    "bench:ci:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --reporter=default --reporter=json --outputFile=bench-results-real.json",
+    "bench:ci:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-raw.json",
+    "bench:ci:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-real.json",
     "bench:compare": "node scripts/compare-benchmarks.js",
     "bench:compare:raw": "node scripts/compare-benchmarks.js bench-results-raw.json",
     "bench:compare:real": "node scripts/compare-benchmarks.js bench-results-real.json",
+    "bench:report": "pnpm bench:report:raw && pnpm bench:report:real",
+    "bench:report:raw": "pnpm bench:ci:raw && pnpm report:html bench-results-raw.json && pnpm report:md bench-results-raw.json",
+    "bench:report:real": "pnpm bench:ci:real && pnpm report:html bench-results-real.json && pnpm report:md bench-results-real.json",
+    "report:html": "node scripts/generate-html-report.js",
+    "report:md": "node scripts/generate-markdown-report.js",
+    "report:all": "node scripts/generate-all-reports.js",
     "typecheck": "tsc --noEmit",
     "check": "pnpm typecheck"
   },
