--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -17,8 +17,11 @@
     "bench:compare:raw": "node scripts/compare-benchmarks.js bench-results-raw.json",
     "bench:compare:real": "node scripts/compare-benchmarks.js bench-results-real.json",
     "bench:report": "pnpm bench:report:raw && pnpm bench:report:real",
-    "bench:report:raw": "pnpm bench:ci:raw && pnpm report:html bench-results-raw.json && pnpm report:md bench-results-raw.json",
-    "bench:report:real": "pnpm bench:ci:real && pnpm report:html bench-results-real.json && pnpm report:md bench-results-real.json",
+    "bench:report:raw": "pnpm bench:ci:raw && pnpm dashboard bench-results-raw.json",
+    "bench:report:real": "pnpm bench:ci:real && pnpm dashboard bench-results-real.json",
+    "dashboard": "node scripts/benchmark-dashboard.js",
+    "report": "node scripts/generate-reports.js",
+    "report:new": "node scripts/generate-report.js",
     "report:html": "node scripts/generate-html-report.js",
     "report:md": "node scripts/generate-markdown-report.js",
     "report:all": "node scripts/generate-all-reports.js",
