feat(adapter-pinia): update to new architecture with enhancer support
- Add middleware support via enhancer callback pattern
- Update API to match Redux and Zustand adapters
- Remove duplicate Vue composables (use @lattice/runtime/vue instead)
- Remove legacy code and update documentation
- Add proper TypeScript types throughout
- Pass all adapter contract tests

--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
     "noImplicitAny": true,
@@ -20,7 +20,6 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "examples/**/*.tsx"
+    "src/**/*.tsx"
   ],
 }
