feat(benchmarks): add comprehensive performance benchmark suite
- Add adapter overhead benchmarks comparing raw vs Lattice-wrapped adapters
- Add head-to-head comparisons (store-react vs zustand)
- Add adapter performance rankings across all adapters
- Add real-world scenario benchmarks (e-commerce, todo app)
- Add memory usage and lifecycle benchmarks
- Add benchmark comparison script for CI
- Update documentation with benchmark categories and usage

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -29,6 +29,7 @@
     "@lattice/adapter-zustand": "workspace:*",
     "@lattice/adapter-redux": "workspace:*",
     "@lattice/adapter-pinia": "workspace:*",
+    "@lattice/adapter-store-react": "workspace:*",
     "@lattice/store-react": "workspace:*",
     "@lattice/store-vue": "workspace:*",
     "@types/node": "^20.0.0",
