feat(runtime): add React transitions support
- Add optional useTransition parameter to subscribeToSlices for non-urgent updates
- Add transitions support to useSliceSelector, useSliceValues, and useLattice hooks
- Import startTransition dynamically to maintain compatibility
- Add comprehensive benchmarks for React transitions performance

Benchmarks show ~9% performance improvement for multiple stores scenario
when using transitions, with minimal overhead for rapid sequential updates.

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@lattice/core": "workspace:*",
+    "@lattice/runtime": "workspace:*",
     "@lattice/adapter-zustand": "workspace:*",
     "@lattice/adapter-redux": "workspace:*",
     "@lattice/adapter-pinia": "workspace:*",
