feat(benchmarks): add timestamps to CI benchmark output files
- CI benchmark results now include timestamp in filename (YYYYMMDD-HHMMSS)
- Prevents overwriting results from multiple benchmark runs
- Updates both bench:ci:* and bench:report:* scripts

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -11,14 +11,14 @@
     "bench:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run",
     "bench:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run",
     "bench:ci": "pnpm bench:ci:raw && pnpm bench:ci:real",
-    "bench:ci:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-raw.json",
-    "bench:ci:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-real.json",
+    "bench:ci:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-raw-$(date +%Y%m%d-%H%M%S).json",
+    "bench:ci:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-real-$(date +%Y%m%d-%H%M%S).json",
     "bench:compare": "node scripts/compare-benchmarks.js",
     "bench:compare:raw": "node scripts/compare-benchmarks.js bench-results-raw.json",
     "bench:compare:real": "node scripts/compare-benchmarks.js bench-results-real.json",
     "bench:report": "pnpm bench:report:raw && pnpm bench:report:real",
-    "bench:report:raw": "pnpm bench:ci:raw && pnpm report bench-results-raw.json && pnpm dashboard bench-results-raw.json",
-    "bench:report:real": "pnpm bench:ci:real && pnpm report bench-results-real.json && pnpm dashboard bench-results-real.json",
+    "bench:report:raw": "export TIMESTAMP=$(date +%Y%m%d-%H%M%S) && LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-raw-$TIMESTAMP.json && pnpm report bench-results-raw-$TIMESTAMP.json && pnpm dashboard bench-results-raw-$TIMESTAMP.json",
+    "bench:report:real": "export TIMESTAMP=$(date +%Y%m%d-%H%M%S) && NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-real-$TIMESTAMP.json && pnpm report bench-results-real-$TIMESTAMP.json && pnpm dashboard bench-results-real-$TIMESTAMP.json",
     "dashboard": "node scripts/benchmark-dashboard.js",
     "report": "node scripts/generate-report.js",
     "typecheck": "tsc --noEmit",
