--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -10,17 +10,10 @@
     "bench": "pnpm bench:raw && pnpm bench:real",
     "bench:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run",
     "bench:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run",
-    "bench:ci": "pnpm bench:ci:raw && pnpm bench:ci:real",
-    "bench:ci:raw": "LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-raw-$(date +%Y%m%d-%H%M%S).json",
-    "bench:ci:real": "NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-real-$(date +%Y%m%d-%H%M%S).json",
-    "bench:compare": "node scripts/compare-benchmarks.js",
-    "bench:compare:raw": "node scripts/compare-benchmarks.js bench-results-raw.json",
-    "bench:compare:real": "node scripts/compare-benchmarks.js bench-results-real.json",
-    "bench:report": "pnpm bench:report:raw && pnpm bench:report:real",
-    "bench:report:raw": "export TIMESTAMP=$(date +%Y%m%d-%H%M%S) && LATTICE_DISABLE_MEMOIZATION=true NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-raw-$TIMESTAMP.json && pnpm report bench-results-raw-$TIMESTAMP.json && pnpm dashboard bench-results-raw-$TIMESTAMP.json",
-    "bench:report:real": "export TIMESTAMP=$(date +%Y%m%d-%H%M%S) && NODE_OPTIONS=--max-old-space-size=4096 vitest bench --run --outputJson bench-results-real-$TIMESTAMP.json && pnpm report bench-results-real-$TIMESTAMP.json && pnpm dashboard bench-results-real-$TIMESTAMP.json",
-    "dashboard": "node scripts/benchmark-dashboard.js",
-    "report": "node scripts/generate-report.js",
+    "bench:report:raw": "LATTICE_DISABLE_MEMOIZATION=true node scripts/run-chunked-benchmarks.js raw",
+    "bench:report:real": "node scripts/run-chunked-benchmarks.js real",
+    "bench:merge": "node scripts/merge-benchmark-results.js",
+    "bench:split": "node scripts/split-benchmark-results.js",
     "typecheck": "tsc --noEmit",
     "check": "pnpm typecheck"
   },
