--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -18,23 +18,25 @@
     "check": "pnpm typecheck"
   },
   "devDependencies": {
+    "@lattice/adapter-pinia": "workspace:*",
+    "@lattice/adapter-redux": "workspace:*",
+    "@lattice/adapter-store-react": "workspace:*",
+    "@lattice/adapter-zustand": "workspace:*",
     "@lattice/core": "workspace:*",
     "@lattice/runtime": "workspace:*",
-    "@lattice/adapter-zustand": "workspace:*",
-    "@lattice/adapter-redux": "workspace:*",
-    "@lattice/adapter-pinia": "workspace:*",
-    "@lattice/adapter-store-react": "workspace:*",
     "@lattice/store-react": "workspace:*",
     "@lattice/store-vue": "workspace:*",
-    "@types/node": "^20.0.0",
-    "vitest": "^3.1.1",
-    "zustand": "^5.0.3",
     "@reduxjs/toolkit": "^2.8.2",
-    "pinia": "^2.3.0",
-    "vue": "^3.5.0",
-    "react": "^18.3.1",
     "@testing-library/react": "^14.0.0",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
-    "jsdom": "^25.0.0"
+    "@types/react-dom": "^19.1.6",
+    "jsdom": "^25.0.0",
+    "pinia": "^2.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "vitest": "^3.1.1",
+    "vue": "^3.5.0",
+    "zustand": "^5.0.3"
   }
 }
