feat(adapter-svelte): add store enhancer pattern and optimize runtime
- Add StoreEnhancer type for middleware-like functionality
- Implement example enhancers: logging, time-travel, devtools
- Remove manual batching in favor of Svelte's automatic batching
- Optimize derivedSlice to use Svelte's native derived store
- Update documentation with enhancer examples
- Export enhancers submodule in package.json

--- a/packages/adapter-svelte/package.json
+++ b/packages/adapter-svelte/package.json
@@ -10,6 +10,10 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./enhancers": {
+      "import": "./dist/enhancers.js",
+      "types": "./dist/enhancers.d.ts"
     }
   },
   "scripts": {
