--- a/packages/adapter-svelte/package.json
+++ b/packages/adapter-svelte/package.json
@@ -10,10 +10,6 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    },
-    "./enhancers": {
-      "import": "./dist/enhancers.js",
-      "types": "./dist/enhancers.d.ts"
     }
   },
   "scripts": {
@@ -27,10 +23,10 @@
   "dependencies": {
     "@lattice/core": "workspace:*",
     "@lattice/runtime": "workspace:*",
-    "svelte": "^4.0.0 || ^5.0.0"
+    "svelte": "^5.0.0"
   },
   "peerDependencies": {
-    "svelte": "^4.0.0 || ^5.0.0"
+    "svelte": "^5.0.0"
   },
   "devDependencies": {
     "@testing-library/svelte": "^5.0.0",
