--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -12,6 +12,7 @@
     "bench:report:real": "node scripts/run-chunked-benchmarks.js real",
     "bench:merge": "node scripts/merge-benchmark-results.js",
     "bench:split": "node scripts/split-benchmark-results.js",
+    "bench:bundle": "tsx measure-bundle-size.ts",
     "dashboard": "vite --config vite.config.dashboard.ts",
     "typecheck": "tsc --noEmit",
     "check": "pnpm typecheck"
@@ -35,6 +36,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "svelte": "^5.0.0",
+    "tsx": "^4.7.0",
+    "vite": "^6.0.0",
     "vitest": "^3.1.1",
     "vue": "^3.5.0",
     "zustand": "^5.0.3"
