--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -12,7 +12,7 @@
     "bench:report:real": "node scripts/run-chunked-benchmarks.js real",
     "bench:merge": "node scripts/merge-benchmark-results.js",
     "bench:split": "node scripts/split-benchmark-results.js",
-    "bench:bundle": "tsx measure-bundle-size.ts",
+    "bench:bundle": "tsx scripts/measure-bundle-size.ts",
     "dashboard": "vite --config vite.config.dashboard.ts",
     "typecheck": "tsc --noEmit",
     "check": "pnpm typecheck"
