--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,22 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
+    "./base": {
+      "import": "./dist/base.js",
+      "types": "./dist/base.d.ts"
+    },
+    "./compose": {
+      "import": "./dist/compose.js",
+      "types": "./dist/compose.d.ts"
+    },
+    "./subscribe": {
+      "import": "./dist/subscribe.js",
+      "types": "./dist/subscribe.d.ts"
+    },
+    "./runtime": {
+      "import": "./dist/runtime.js",
+      "types": "./dist/runtime.d.ts"
+    },
     "./testing": {
       "import": "./dist/testing.js",
       "types": "./dist/testing.d.ts"
