--- a/packages/adapter-zustand/package.json
+++ b/packages/adapter-zustand/package.json
@@ -22,10 +22,10 @@
   },
   "dependencies": {
     "@lattice/core": "workspace:*",
-    "@lattice/runtime": "workspace:*",
-    "zustand": "^5.0.3"
+    "@lattice/runtime": "workspace:*"
   },
   "peerDependencies": {
+    "zustand": ">=3.0.0",
     "react": ">=16.8.0"
   },
   "peerDependenciesMeta": {
@@ -46,7 +46,8 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "zustand": "^5.0.3"
   },
   "files": [
     "dist"
