move to runes again

--- a/packages/adapter-svelte/package.json
+++ b/packages/adapter-svelte/package.json
@@ -10,6 +10,10 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./dist/benchmark-store.js": {
+      "import": "./dist/benchmark-store.js",
+      "types": "./dist/benchmark-store.d.ts"
     }
   },
   "scripts": {
