test: fix runtime tests and remove store tests from core
- Update runtime tests to use global subscribe from enhanced createStore
- Remove store.test.ts and store-composition.test.ts from core (moved to lattice-store)
- Update package.json dependencies for runtime and core
- Fix Svelte and Vue test store creation to use new API

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,10 @@
     "./utils": {
       "import": "./dist/utils.js",
       "types": "./dist/utils.d.ts"
+    },
+    "./lib/metadata": {
+      "import": "./dist/lib/metadata.js",
+      "types": "./dist/lib/metadata.d.ts"
     }
   },
   "files": [
