chore: update imports to use @lattice/store instead of store-react
- Update adapter-store-react to import from @lattice/store/react
- Update benchmark imports from @lattice/store-react to @lattice/store/react
- Update Svelte benchmark store to use new createStore API
- Fix adapter tests to work with new reactive slice API

--- a/packages/adapter-store-react/package.json
+++ b/packages/adapter-store-react/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@lattice/core": "workspace:*",
     "@lattice/runtime": "workspace:*",
-    "@lattice/store-react": "workspace:*"
+    "@lattice/store": "workspace:*"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
