--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "bench": "pnpm bench:report:real",
     "bench:store-react": "node scripts/run-chunked-benchmarks.js real store-react",
+    "bench:lattice": "node scripts/run-chunked-benchmarks.js real lattice",
     "bench:report:raw": "LATTICE_DISABLE_MEMOIZATION=true node scripts/run-chunked-benchmarks.js raw",
     "bench:report:real": "node scripts/run-chunked-benchmarks.js real",
     "bench:merge": "node scripts/merge-benchmark-results.js",
@@ -32,6 +33,7 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^19.1.6",
     "jsdom": "^25.0.0",
+    "mobx": "^6.13.6",
     "pinia": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
