Update adapter-store-react to remove lattice-store dependency
- Remove @lattice/store dependency from package.json
- Inline StoreReactApi type definition (previously imported)
- Update README to remove store-react dependency references
- Update vite config to remove store-react externals

--- a/packages/adapter-store-react/package.json
+++ b/packages/adapter-store-react/package.json
@@ -22,8 +22,7 @@
   },
   "dependencies": {
     "@lattice/core": "workspace:*",
-    "@lattice/runtime": "workspace:*",
-    "@lattice/store": "workspace:*"
+    "@lattice/runtime": "workspace:*"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
