feat: migrate from @lattice/runtime to @lattice/frameworks package
Consolidate framework integrations into a single, focused package:

- Rename @lattice/runtime → @lattice/frameworks for clarity
- Update all imports across adapters, benchmarks, and examples
- Remove outdated examples and runtime-specific files
- Maintain Vue composables with slice-based architecture
- Keep performance-first Svelte utilities with fine-grained reactivity
- Update build configurations and package exports
- Streamline package architecture for better maintainability

The new @lattice/frameworks package provides:
- React hooks via @lattice/frameworks/react
- Vue composables via @lattice/frameworks/vue
- Svelte stores via @lattice/frameworks/svelte

All framework integrations now leverage Lattice's slice-based architecture
with fine-grained reactivity for optimal performance.

--- a/packages/adapter-store-react/package.json
+++ b/packages/adapter-store-react/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@lattice/core": "workspace:*",
-    "@lattice/runtime": "workspace:*"
+    "@lattice/frameworks": "workspace:*"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
