--- a/packages/adapter-redux/package.json
+++ b/packages/adapter-redux/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@lattice/core": "workspace:*",
-    "@lattice/runtime": "workspace:*"
+    "@lattice/frameworks": "workspace:*"
   },
   "peerDependencies": {
     "@reduxjs/toolkit": ">=1.8.0",
