--- a/packages/adapter-svelte/package.json
+++ b/packages/adapter-svelte/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@lattice/core": "workspace:*",
-    "@lattice/runtime": "workspace:*"
+    "@lattice/frameworks": "workspace:*"
   },
   "peerDependencies": {
     "svelte": "^5.0.0"
