--- a/packages/adapter-zustand/package.json
+++ b/packages/adapter-zustand/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@lattice/core": "workspace:*",
-    "@lattice/runtime": "workspace:*"
+    "@lattice/frameworks": "workspace:*"
   },
   "peerDependencies": {
     "zustand": ">=3.0.0",
