--- a/packages/frameworks/package.json
+++ b/packages/frameworks/package.json
@@ -44,8 +44,8 @@
   },
   "peerDependencies": {
     "react": "^18.0.0",
-    "vue": "^3.3.0",
-    "svelte": "^4.0.0 || ^5.0.0"
+    "svelte": "^4.0.0 || ^5.0.0",
+    "vue": "^3.3.0"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -59,6 +59,7 @@
     }
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^18.0.0",
     "@vue/test-utils": "^2.4.0",
@@ -66,12 +67,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
+    "svelte": "^5.0.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.1.1",
-    "vue": "^3.4.0",
-    "svelte": "^5.0.0"
+    "vue": "^3.4.0"
   },
   "sideEffects": false,
   "publishConfig": {
