refactor(benchmarks): clean up and modernize benchmark infrastructure
- Remove unused dashboard, analysis docs, and legacy scripts
- Add memory reporting utilities for better performance insights
- Update benchmark suites to use new select() utility syntax
- Streamline benchmark configuration and setup
- Focus on core performance measurement capabilities

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -8,12 +8,12 @@
   "private": true,
   "scripts": {
     "bench": "pnpm bench:report:real",
-    "bench:store-react": "node scripts/run-chunked-benchmarks.js real store-react",
-    "bench:lattice": "node scripts/run-chunked-benchmarks.js real lattice",
-    "bench:report:raw": "LATTICE_DISABLE_MEMOIZATION=true node scripts/run-chunked-benchmarks.js raw",
-    "bench:report:real": "node scripts/run-chunked-benchmarks.js real",
-    "bench:merge": "node scripts/merge-benchmark-results.js",
-    "bench:split": "node scripts/split-benchmark-results.js",
+    "bench:store-react": "node --expose-gc scripts/run-chunked-benchmarks.js real store-react",
+    "bench:lattice": "node --expose-gc scripts/run-chunked-benchmarks.js real lattice",
+    "bench:report:raw": "LATTICE_DISABLE_MEMOIZATION=true node --expose-gc scripts/run-chunked-benchmarks.js raw",
+    "bench:report:real": "node --expose-gc scripts/run-chunked-benchmarks.js real",
+    "bench:bundle": "node scripts/analyze-bundle-size.js",
+    "bench:all": "pnpm bench:bundle && pnpm bench",
     "dashboard": "vite --config vite.config.dashboard.ts",
     "typecheck": "tsc --noEmit",
     "check": "pnpm typecheck"
@@ -36,6 +36,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "svelte": "^5.0.0",
+    "terser": "^5.36.0",
     "tsx": "^4.7.0",
     "vite": "^6.0.0",
     "vitest": "^3.1.1",
