chore: update package dependencies and configurations
Update package.json files and lock file to reflect:
- New framework dependencies and build targets
- Updated vitest configuration for better testing
- Dependency version alignment across packages

--- a/packages/frameworks/package.json
+++ b/packages/frameworks/package.json
@@ -24,6 +24,10 @@
     "./svelte": {
       "import": "./dist/svelte.js",
       "types": "./dist/svelte.d.ts"
+    },
+    "./runes": {
+      "import": "./dist/runes.svelte.js",
+      "types": "./dist/runes.svelte.d.ts"
     }
   },
   "files": [
