--- a/packages/frameworks/package.json
+++ b/packages/frameworks/package.json
@@ -21,9 +21,9 @@
       "import": "./dist/vue.js",
       "types": "./dist/vue.d.ts"
     },
-    "./svelte": {
-      "import": "./dist/svelte.js",
-      "types": "./dist/svelte.d.ts"
+    "./solid": {
+      "import": "./dist/solid.js",
+      "types": "./dist/solid.d.ts"
     }
   },
   "files": [
@@ -36,6 +36,7 @@
     "dev": "vite build --watch",
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx",
     "check": "pnpm typecheck && pnpm test",
     "test": "vitest run"
   },
@@ -44,22 +45,21 @@
   },
   "peerDependencies": {
     "react": "^18.0.0",
-    "svelte": "^4.0.0 || ^5.0.0",
+    "solid-js": "^1.8.0",
     "vue": "^3.3.0"
   },
   "peerDependenciesMeta": {
     "react": {
       "optional": true
     },
-    "vue": {
+    "solid-js": {
       "optional": true
     },
-    "svelte": {
+    "vue": {
       "optional": true
     }
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^18.0.0",
     "@vue/test-utils": "^2.4.0",
@@ -67,7 +67,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
-    "svelte": "^5.0.0",
+    "solid-js": "^1.8.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vite-plugin-dts": "^4.5.4",
