--- a/packages/frameworks/package.json
+++ b/packages/frameworks/package.json
@@ -71,6 +71,7 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-solid": "^2.11.7",
     "vitest": "^3.1.1",
     "vue": "^3.4.0"
   },
