--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@lattice/core": "workspace:*",
     "@lattice/frameworks": "workspace:*",
+    "@preact/signals-core": "^1.8.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.0.0",
