--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^19.1.6",
+    "glob": "^11.0.3",
     "jsdom": "^25.0.0",
     "mobx": "^6.13.6",
     "pinia": "^2.3.0",
