--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -25,8 +25,7 @@
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
-    "check": "pnpm typecheck && pnpm test && pnpm lint",
-    "test": "vitest run"
+    "check": "pnpm typecheck && pnpm lint"
   },
   "dependencies": {
     "@lattice/signals": "workspace:*",
