--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@wxt-dev/module-react": "^1.1.3",
+    "globals": "^16.3.0",
     "typescript": "^5.8.3",
     "wxt": "^0.20.6"
   }
